--- a/NEWS
+++ b/NEWS
@@ -16,7 +16,8 @@ Changes in 3.8.2dev
   - Fix GEOSProjectNormalized return -1 on exception (#1058, Joris Van den Bossche)
   - Fix memory management quirk in CAPI (#1050, Paul Ramsey)
   - Allow build on Apple ARM64 (Taras Zakharko)
-
+  - Fix crash in GEOSPreparedIntersects and GEOSPreparedContains for
+    POINT EMPTY input (Even Rouault)
 
 Changes in 3.8.1
 2020-03-10
