Drop inlines.cpp for geos 3.10 to address duplicate symbols errors on many platforms References #1094 References #1090

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,10 @@ Changes in 3.10.0
   - Check for invalid geometry before fixing polygonal result in Densifier and DPSimplifier (Martin Davis)
   - Fix overlay handling of flat interior lines (JTS-685, Martin Davis)
 
+- Changes:
+  - #1094, #1090: Drop inlines.cpp to address duplicate symbols on many platforms
+    (Regina Obe)
+
 Changes in 3.9.0
 2020-12-09
 
