--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.9.2
   - Fix crash in GEOSPreparedIntersects and GEOSPreparedContains for
     POINT EMPTY input (Even Rouault)
   - Fix IsValidOp to correctly report invalid nested MultiPolygons (#1112, Martin Davis)
+  - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
 
 
 Changes in 3.9.1
