--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Changes in 3.9.2
   - Fix IsValidOp to correctly report invalid nested MultiPolygons (#1112, Martin Davis)
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Declare parameterless functions in geos_c.h as func(void) (Paul Ramsey)
+  - Performance improvement in SegmentNodeList (Even Rouault)
 
 
 Changes in 3.9.1
