--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,7 @@ Changes in 3.10.0
   - Fix IsValidOp to correctly report invalid nested MultiPolygons (#1112, Martin Davis)
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Fix IsValidOp to correctly report certain kinds of invalid LinearRings (Martin Davis)
+  - Improve STRtree performance through TemplateSTRtree implementation (Daniel Baston)
 
 - Changes:
   - #1094, #1090: Drop inlines.cpp to address duplicate symbols on many platforms
