--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.10.2
 
 - Fixes/Improvements:
   - Fix crash in GeoJSONWriter in case of empty points (#1139, Paul Ramsey)
+  - Improve BuildArea performance (#1122, Sandro Santilli)
 
 
 Changes in 3.10.1
