When dealing with a zero-length linestring in GEOSProjectNormalized, do not return NaN as the projected length, but rather return 0.0 for the case where GEOSProject returns 0.0 and an error code otherwise to stop the divide-by-zero case. References https://github.com/libgeos/geos/issues/475

--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Changes in 3.10.0
 - Changes:
   - #1094, #1090: Drop inlines.cpp to address duplicate symbols on many platforms
     (Regina Obe)
+  - GH475: Do not return NaN from GEOSProjectNormalized_r (Paul Ramsey)
 
 Changes in 3.9.0
 2020-12-09
