--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Changes in 3.9.2
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Declare parameterless functions in geos_c.h as func(void) (Paul Ramsey)
   - Performance improvement in SegmentNodeList (Even Rouault)
+  - Catch memory leaks on createPolygon failure (#1111, Paul Ramsey)
 
 
 Changes in 3.9.1
