--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Changes in 3.10.0
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Fix IsValidOp to correctly report certain kinds of invalid LinearRings (Martin Davis)
   - Improve STRtree performance through TemplateSTRtree implementation (Daniel Baston)
+  - Fix DiscreteFrechetDistance to use initial points of input lines (#1128, Martin Davis)
 
 - Changes:
   - #1094, #1090: Drop inlines.cpp to address duplicate symbols on many platforms
