--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Changes in 3.8.3
 - Bug fixes / improvements
   - Add void to no-argument prototypes. References libgeos#437 (Paul Ramsey)
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
-
+  - Fix DiscreteFrechetDistance to use initial points of input lines (#1128, Martin Davis)
 
 Changes in 3.8.2
 2021-04-10
