--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,9 @@ Changes in 3.10.0
           (Paul Ramsey, Martin Davis)
   - CAPI: GEOSWKBWriter_getFlavor, GEOSWKBWriter_setFlavor support
           outputting ISO or Extended WKB flavors (#466, Paul Ramsey)
+  - CAPI: GEOSConstrainedDelaunayTriangulation, builds a constrained triangulation
+          of an input Polygon or MultiPolygon, returning a GeometryCollection(Polygon)
+          of the triangles.
 
 - Fixes/Improvements:
   - Preserve ordering of lines in overlay results (Martin Davis)
