--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 Changes in 3.10.0
-2020-xx-xx
+2020-10-20
 
 - New things:
 
@@ -18,13 +18,14 @@ Changes in 3.10.0
           (Paul Ramsey, Martin Davis)
   - CAPI: GEOSWKBWriter_getFlavor, GEOSWKBWriter_setFlavor support
           outputting ISO or Extended WKB flavors (#466, Paul Ramsey)
-  - CAPI: GEOSConstrainedDelaunayTriangulation, builds a constrained triangulation
-          of an input Polygon or MultiPolygon, returning a GeometryCollection(Polygon)
-          of the triangles.
+  - CAPI: GEOSConstrainedDelaunayTriangulation, builds a constrained
+          triangulation of an input Polygon or MultiPolygon,
+          returning a GeometryCollection(Polygon) of the triangles.
 
 - Fixes/Improvements:
   - Preserve ordering of lines in overlay results (Martin Davis)
-  - Check for invalid geometry before fixing polygonal result in Densifier and DPSimplifier (Martin Davis)
+  - Check for invalid geometry before fixing polygonal result in Densifier
+    and DPSimplifier (Martin Davis)
   - Fix overlay handling of flat interior lines (JTS-685, Martin Davis)
   - Fix IsValidOp to correctly report invalid nested MultiPolygons (#1112, Martin Davis)
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
