--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.10.1
 - Fixes/Improvements:
   - Fix mistake in constants used to select WKB flavor in C API (GH489, Paul Ramsey)
   - Fix crash when reducing precision on a LinearRing (#1135, Paul Ramsey)
+  - Fix GeoJSON crash on invalid input (GH498, Even Rouault)
 
 
 Changes in 3.10.0
