--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Changes in 3.10.1
   - Fix mistake in constants used to select WKB flavor in C API (GH489, Paul Ramsey)
   - Fix crash when reducing precision on a LinearRing (#1135, Paul Ramsey)
   - Fix GeoJSON crash on invalid input (GH498, Even Rouault)
+  - Use std::sqrt exclusively for Solaris build (Paul Ramsey)
 
 
 Changes in 3.10.0
