--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Changes in 3.11.0
 
 - Fixes/Improvements:
   - Fix unaryUnion to avoid segfault with empty polygon (GH-501, Mike Taves)
+  - Fix SnapRoundingNoder to use tolerance in noding; also fixes GeometryPrecisionReducer (#504, Sergei)
 
 - Changes:
 
