--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.10.2
   - Fix crash in GeoJSONWriter in case of empty points (#1139, Paul Ramsey)
   - Improve BuildArea performance (#1122, Sandro Santilli)
   - Fix unaryUnion to avoid segfault with empty polygon (GH-501, Mike Taves)
+  - Fix memory leak on exception in prepared geometry (GH-506, Dan Baston)
 
 
 Changes in 3.10.1
