--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.10.2
 2021-xx-xx
 
 - Fixes/Improvements:
+  - Fix crash in MonotoneChain with empty CoordinateSequence (GH-539, Sandro Santilli)
   - Fix crash in GeoJSONWriter in case of empty points (TRAC-1139, Paul Ramsey)
   - Improve BuildArea performance (TRAC-1122, Sandro Santilli)
   - Fix unaryUnion to avoid segfault with empty polygon (GH-501, Mike Taves)
