--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes in 3.8.3
   - Add void to no-argument prototypes. References libgeos#437 (Paul Ramsey)
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Fix DiscreteFrechetDistance to use initial points of input lines (#1128, Martin Davis)
+  - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
 
 Changes in 3.8.2
 2021-04-10
