Fix RelateOp for lines with intersections near bdy

--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Changes in 3.10.3
 - Fixes/Improvements:
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
   - Add SnappingNoder seeding (Martin Davis)
-
+  - Fix RelateOp (and intersects predicate) for lines with intersections very near boundary (GH-570, Martin Davis)
 
 Changes in 3.10.2
 2022-01-15
