Fix segfault in Hausdorff distance with empty geometries, references GH-569

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Changes in 3.8.3
   - Fix BufferOp to avoid artifacts in certain polygon buffers (#1101, Martin Davis)
   - Fix DiscreteFrechetDistance to use initial points of input lines (#1128, Martin Davis)
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
+  - Fix segfault in Hausdorff distance with empty geometries (GH-569)
+
 
 Changes in 3.8.2
 2021-04-10
