--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Changes in 3.9.3
   - Infinite loop on collapsed input in MaximumInscribedCircle (Paul Ramsey)
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
   - Fix RelateOp (and intersects predicate) for lines with intersections very near boundary (GH-570, Martin Davis)
+  - Fix segfault in Hausdorff distance with empty geometries (GH-569, Paul Ramsey)
+
 
 Changes in 3.9.2
 2021-11-01
