--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.10.3
 
 - Fixes/Improvements:
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
+  - Fix segfault in Hausdorff distance with empty geometries (GH-569)
 
 
 Changes in 3.10.2
