--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Changes in 3.10.3
   - Add SnappingNoder seeding (Martin Davis)
   - Fix RelateOp (and intersects predicate) for lines with intersections very near boundary (GH-570, Martin Davis)
   - Fix segfault in Hausdorff distance with empty geometries (GH-569)
+  - Fix inf loop in PolygonTriangulator (GH-574, Andrew Stelter)
 
 
 Changes in 3.10.2
