--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ Changes in 3.10.3
   - Fix segfault in Hausdorff distance with empty geometries (GH-569)
   - Fix inf loop in PolygonTriangulator (GH-574, Andrew Stelter)
   - Fix short circuit from TemplateSTRtree query (GH-577, Andrew Stelter)
-
+  - Fix IsValidOp to handle repeated node points (JTS-845, Martin Davis)
 
 Changes in 3.10.2
 2022-01-15
