Fix IsSimpleOp for closed lines with repeated endpts

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Changes in 3.10.3
   - Fix inf loop in PolygonTriangulator (GH-574, Andrew Stelter)
   - Fix short circuit from TemplateSTRtree query (GH-577, Andrew Stelter)
   - Fix IsValidOp to handle repeated node points (JTS-845, Martin Davis)
+  - Fix IsSimpleOp to handle closed LineStrings with repeated endpoints (JTS-851, Martin Davis)
 
 Changes in 3.10.2
 2022-01-15
