--- a/NEWS
+++ b/NEWS
@@ -14,7 +14,7 @@ Changes in 3.10.3
   - Add OverlayNG area check heuristic (JTS-812, Paul Ramsey)
   - Improve test_geos_unit application error checking and reporting (Martin Davis)
   - Fix LengthIndexedLine (via LengthLocationMap fix) (JTS-859, Martin Davis)
-
+  - Fix PolygonHoleJoiner (JTS-862, Martin Davis)
 
 Changes in 3.10.2
 2022-01-15
