--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Changes in 3.9.3
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
   - Fix RelateOp (and intersects predicate) for lines with intersections very near boundary (GH-570, Martin Davis)
   - Fix segfault in Hausdorff distance with empty geometries (GH-569, Paul Ramsey)
+  - Fix segfault in GeometryNoder for empty input (GH-601, Paul Ramsey)
 
 
 Changes in 3.9.2
