--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ Changes in 3.10.3
   - Fix LengthIndexedLine (via LengthLocationMap fix) (JTS-859, Martin Davis)
   - Fix PolygonHoleJoiner (JTS-862, Martin Davis)
   - Fix crash in GeometryNoder on empty intpu (GH-601, Paul Ramsey)
+  - Handle case where user sets explicit absolute lib and include dirs (GH-608, Paul Ramsey)
 
 
 Changes in 3.10.2
