Fix MinimumDiameter getMinRectangle for flat input

--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ Changes in 3.9.3
   - Fix segfault in Hausdorff distance with empty geometries (GH-569, Paul Ramsey)
   - Fix segfault in GeometryNoder for empty input (GH-601, Paul Ramsey)
   - Handle zero-area envelope in Hilbert Encoder (GH-579, Paul Ramsey)
-
+  - Fix MinimumDiameter getMinimumRectangle for flat input (JTS-875, Martin Davis)
 
 Changes in 3.9.2
 2021-11-01
