Fix BufferOp inverted ring check (JTS-878)

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,7 @@ Changes in 3.8.3
   - VoronoiDiagramBuilder::setSites(const CoordinateSequence&) return sorted (GH-551)
   - Fix segfault in Hausdorff distance with empty geometries (GH-569)
   - Fix segfault with GeometryNoder on empty intput (GH-601, Paul Ramsey)
-
+  - Fix BufferOp inverted ring check (JTS-878, Martin Davis)
 
 Changes in 3.8.2
 2021-04-10
