--- a/web/content/posts/2022-07-01-geos-3-11-0-released.md
+++ b/web/content/posts/2022-07-01-geos-3-11-0-released.md
@@ -2,6 +2,7 @@
 title: "Version 3.11.0"
 type: posts
 date: 2022-07-01T12:00Z
+draft: false
 ---
 
 The 3.11.0 release of GEOS is now available [to download]({{< ref "/usage/download" >}}).
