--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.9.4
 
 - Bug fixes / improvements:
   - Fix PreparedGeometry to avoid crashes with EMPTY elements in input (GH-678, Martin Davis)
+  - Add OverlayNG support for simple GeometryCollection inputs (GH-716, Martin Davis)
 
 
 Changes in 3.9.3
