--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Changes in 3.9.4
 - Bug fixes / improvements:
   - Fix PreparedGeometry to avoid crashes with EMPTY elements in input (GH-678, Martin Davis)
   - Add OverlayNG support for simple GeometryCollection inputs (GH-716, Martin Davis)
-
+  - Fix TopologyPreservingSimplifier to produce stable results for Multi inputs (GH-718)
 
 Changes in 3.9.3
 2022-06-02
