--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Changes in 3.10.4
   - Add OverlayNG support for simple GeometryCollection inputs (GH-716, Martin Davis)
   - Fix TopologyPreservingSimplifier to produce stable results for Multi inputs (GH-718)
   - Improve ConvexHull radial sort robustness (GH-724, Martin Davis)
+  - Use more robust Delaunay Triangulation frame size heuristic (GH-728, Martin Davis)
 
 Changes in 3.10.3
 2022-06-03
