--- a/NEWS
+++ b/NEWS
@@ -5,8 +5,9 @@ Changes in 3.9.4
 - Bug fixes / improvements:
   - Fix PreparedGeometry to avoid crashes with EMPTY elements in input (GH-678, Martin Davis)
   - Add OverlayNG support for simple GeometryCollection inputs (GH-716, Martin Davis)
-  - Fix TopologyPreservingSimplifier to produce stable results for Multi inputs (GH-718)
+  - Fix TopologyPreservingSimplifier to produce stable results for Multi inputs (GH-718, Martin Davis)
   - Improve ConvexHull radial sort robustness (GH-724, Martin Davis)
+  - Use more robust Delaunay Triangulation frame size heuristic (GH-728, Martin Davis)
 
 Changes in 3.9.3
 2022-06-02
