--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Changes in 3.10.6
   - GeoJSONReader: Fix 2D empty geometry creation (GH-910, Mike Taves)
   - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
   - Remove undefined behaviour in use of null PrecisionModel (GH-931, Jeff Walton)
+  - PreparedLineStringIntersects: Fix incorrect result with mixed-dim collection with points (GH-774, Dan Baston)
 
 Changes in 3.10.5
 2023-03-16
