--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Changes in 3.6.6dev
-YYYY-MM-DD
+Changes in 3.6.6
+2023-01-27
 
 - Bug fixes / improvements
   - Fix segfault in Hausdorff distance with empty geometries (GH-569)
