--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.10.5
 - Fixes/Improvements:
   - Support gcc-13 (GH-743, Sergei Trofimovich)
   - Disallow Inf envelopes in Quadtree, avoid inf loop (Paul Ramsey)
+  - GEOSUnaryUnion: Fix crash on collection containing empty point (GH-830, Dan Baston)
 
 
 Changes in 3.10.4
