IndexedFacetDistance: Avoid crash on Inf inputs
Fixes https://github.com/libgeos/geos/issues/821

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.9.5
 
 - Bug fixes / improvements:
   - GEOSUnaryUnion: Fix crash on collection containing empty point (GH-830, Dan Baston)
+  - IndexedFacetDistance: Fix crash with Inf coordinates (GH-821, Dan Baston)
 
 
 Changes in 3.9.4
