--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Changes in 3.9.5
 - Bug fixes / improvements:
   - GEOSUnaryUnion: Fix crash on collection containing empty point (GH-830, Dan Baston)
   - IndexedFacetDistance: Fix crash with Inf coordinates (GH-821, Dan Baston)
+  - HausdorffDistance: Fix crash on collection containing empty point (GH-840, Dan Baston)
   - DistanceOp: Fix crash on collection containing empty point (GH-842, Dan Baston)
 
 
