DistanceOp: Fix crash on collection with empty component (#842)

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Changes in 3.10.5
   - GEOSUnaryUnion: Fix crash on collection containing empty point (GH-830, Dan Baston)
   - GEOSSTRtree_iterate: Do not return removed items (GH-833, Dan Baston)
   - IndexedFacetDistance: Fix crash with Inf coordinates (GH-821, Dan Baston)
+  - DistanceOp: Fix crash on collection containing empty point (GH-842, Dan Baston)
 
 
 Changes in 3.10.4
