--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Changes in 3.9.5
   - GEOSUnaryUnion: Fix crash on collection containing empty point (GH-830, Dan Baston)
   - IndexedFacetDistance: Fix crash with Inf coordinates (GH-821, Dan Baston)
   - HausdorffDistance: Fix crash on collection containing empty point (GH-840, Dan Baston)
+  - MaximumInscribedCircle: Fix infinite loop with non-finite coordinates (GH-843, Dan Baston)
   - DistanceOp: Fix crash on collection containing empty point (GH-842, Dan Baston)
 
 
