--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ Changes in 3.10.6
 2023-xx-xx
 
 - Fixes/Improvements:
-
+  - LargestEmptyCircle: enhance boundary to allow any polygonal geometry (GH-859, Martin Davis)
 
 Changes in 3.10.5
 2023-03-16
