--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Changes in 3.10.6
 
 - Fixes/Improvements:
   - LargestEmptyCircle: enhance boundary to allow any polygonal geometry (GH-859, Martin Davis)
+  - Build issues with gcc-13 (GH-863)
 
 Changes in 3.10.5
 2023-03-16
