GEOSClipByRect: Fix case with POINT EMPTY, add more tests (#913)

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Changes in 3.10.6
   - LargestEmptyCircle: enhance boundary to allow any polygonal geometry (GH-859, Martin Davis)
   - Build issues with gcc-13 (GH-863)
   - GeoJSONReader: Fix 2D empty geometry creation (GH-910, Mike Taves)
+  - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
 
 Changes in 3.10.5
 2023-03-16
