--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Changes in 3.9.5
   - HausdorffDistance: Fix crash on collection containing empty point (GH-840, Dan Baston)
   - MaximumInscribedCircle: Fix infinite loop with non-finite coordinates (GH-843, Dan Baston)
   - DistanceOp: Fix crash on collection containing empty point (GH-842, Dan Baston)
+  - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
 
 
 Changes in 3.9.4
