--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 3.7.6
+20xx-xx-xx
+
+- Bug fixes / improvements
+  - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
+
 Changes in 3.7.5
 2022-06-08
 
