--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Changes in 3.10.6
   - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
   - Remove undefined behaviour in use of null PrecisionModel (GH-931, Jeff Walton)
   - PreparedLineStringIntersects: Fix incorrect result with mixed-dim collection with points (GH-774, Dan Baston)
+  - Skip over testing empty distances for mixed collections (GH-979, Paul Ramsey)
 
 Changes in 3.10.5
 2023-03-16
