--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ Changes in 3.9.5
   - DistanceOp: Fix crash on collection containing empty point (GH-842, Dan Baston)
   - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
   - Remove undefined behaviour in use of null PrecisionModel (GH-931, Jeff Walton)
+  - Skip over testing empty distances for mixed collections (GH-979, Paul Ramsey)
 
 
 Changes in 3.9.4
