--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,11 @@
 
-Changes in 3.8.4
-20xx-xx-xx
+Changes in 3.8.4 EOL
+2024-11-xx
 
 - Bug fixes / improvements
   - Fix PreparedGeometry to avoid crashes with EMPTY elements in input (GH-678, Martin Davis)
   - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
+  - Fix Crash in GEOSIntersects with empty point inputs (GH-673, Daniel Baston)
 
 
 Changes in 3.8.3
