--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@
   - Fix PreparedGeometry to avoid crashes with EMPTY elements in input (GH-678, Martin Davis)
   - GEOSClipByRect: Fix case with POINT EMPTY (GH-913, Mike Taves)
   - Fix Crash in GEOSIntersects with empty point inputs (GH-673, Daniel Baston)
-
+  - Add missing includes in TopologyLocation (GH-991, Regina Obe)
 
 ## Changes in 3.8.3
 2022-06-02
