--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@
 
 - Fixes/Improvements:
   - Fix build on Illumus (GH-971)
+  - PointOnSurface crashes with a collection containing a empty linestring (GH-1002, Paul Ramsey)
 
 ## Changes in 3.10.6
 2023-11-11
