--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@
 20xx-xx-xx
 
 - Fixes/Improvements:
+  - Intersection: change to using DoubleDouble computation to improve robustness (GH-937, Martin Davis)
   - Fix build on Illumus (GH-971)
   - PointOnSurface crashes with a collection containing a empty linestring (GH-1002, Paul Ramsey)
   - Fix IsSimpleOp for MultiPoint with empty element (GH-1005, Martin Davis)
